[gd_scene load_steps=2 format=3 uid="uid://80ujh2ifjd7l"]

[ext_resource type="Script" path="res://scripts/main_menu_select.gd" id="1_ool7d"]

[node name="Main Menu Select" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 144.0
offset_top = 431.0
offset_right = 144.0
offset_bottom = 431.0
script = ExtResource("1_ool7d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(0.80341, 0.514276, 0.795725, 1)
layout_mode = 1
offset_left = -29.0
offset_top = -45.0
offset_right = 393.0
offset_bottom = 93.0

[node name="Start" type="Button" parent="VBoxContainer"]
modulate = Color(0.585967, 0.0613417, 0.554907, 1)
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "Start"

[node name="Continue" type="Button" parent="VBoxContainer"]
modulate = Color(0.585967, 0.0613417, 0.554907, 1)
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "Continue
"

[node name="Quit" type="Button" parent="VBoxContainer"]
modulate = Color(0.584314, 0.0627451, 0.556863, 1)
texture_filter = 1
layout_mode = 2
button_mask = 0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
